--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
       rel="stylesheet"
     />
-    <link rel="icon" href="source code/images/logo-img/1.png" />
+    <link rel="icon" href="Source code/images/logo-img/1.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Alkatra:wght@400;500&family=Delicious+Handrawn&family=Poppins:wght@300;400;500;600;700;800;900&family=Shadows+Into+Light&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap"
       rel="stylesheet"
@@ -157,7 +157,7 @@
 
         <div class="feedback-card-container">
           <div class="card-feedback">
-            <img src="source code/images/Landing-page-img/user2.png" alt="" />
+            <img src="Source code/images/Landing-page-img/user2.png" alt="" />
             <h3>Ahmad</h3>
             <span> <i class="fa-solid fa-star"></i>4.5</span>
             <p>
@@ -179,7 +179,7 @@
           </div>
 
           <div class="card-feedback">
-            <img src="source code/images/Landing-page-img/user3.png" alt="" />
+            <img src="Source code/images/Landing-page-img/user3.png" alt="" />
             <div class="feedback-user-rate">
               <h3>Sami</h3>
               <span> <i class="fa-solid fa-star"></i> 4.5</span>
